Several updates to java 11.